--- a/memes.html
+++ b/memes.html
@@ -145,7 +145,7 @@
             <div class="rules-card">
                 <h3 class="rules-title" data-i18n="rules.title">Community Guidelines</h3>
                 <ul class="rules-list">
-                    <li data-i18n="rules.1">No political, NSFW, or offensive content</li>
+                    <li data-i18n="rules.1">No political, Adult, or offensive content</li>
                     <li data-i18n="rules.2">Keep it fun and relevant to SUOLALA</li>
                     <li data-i18n="rules.3">Respect other community members</li>
                     <li data-i18n="rules.4">All memes require admin approval before appearing publicly</li>
